# tec-ai-langchain

./: .gitignore  1_tool_calling.py  2_VecDB_FAISS.py  3_FAISS_RAG.py  3_FAISS_demo.py  4_pinecone_langchain1.py  5_pinecone_bigdemo.py  6_ReAct_agent_with_callbacks_OLLAMA.py  README.md  main.py  migration_hellworld.py  models_and_templates.py  prompt_for_meta.py  pyproject.toml  search agent.py  test.py
old codes/: 1_hello_world_env.py  3_agent_3 tools.py  3_react_agent.py  4_search agent.py  5_tool_calling_agent.py  6_ReAct_agent_with_callbacks.py  callbacks.py  prompt_for_meta.py
