[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "dotenv>=0.9.9",
    "isort>=6.1.0",
    "langchain>=1.0,<2.0",
    "langchain-community>=0.4,<0.5",
    "langchain-core>=1.0,<2.0",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=1.0,<2.0",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0,<2.0",
    "python-dotenv>=1.1.1",
]
