[project]
name = "tec-agentic-ai"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faiss-cpu>=1.7.4",
    "langchain<1.0",
    "langchain-community<0.4",
    "langchain-core<1.0",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "langchain-pinecone<=0.2.12",
    "langchain-tavily>=0.2.12",
    "python-dotenv>=1.2.1",
]
